proyecto listo para entrega final, agregué libreria y api

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kolker+Brush&display=swap" rel="stylesheet">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="public/css/estilo.css">
     <title>Merlina's Piercing</title>
 </head>
@@ -23,54 +24,12 @@
         </nav>
     </div>
 
-<!-- banner -->
-<!-- <div class="banner">
-    <div class="banner-container">
-        <h1>Merlina's Piercing</h1>
-        <p>El mejor lugar para comprar tus piercings</p>
-    </div>
-</div> -->
-
 <!-- shop content -->
 <div id="shopContent" class="shop-content"></div>
 
 <!-- modal container -->
 <div id="modalContainer" class="modal-container"></div>
-<!-- <body class="grid-container">
-    <header class="header">
-        <div class="header_logo">
-        <img src="./img/prueba3.png" alt="logo">
-        </div>
-        <div class="header_titulo">
-            <h1>Merlina's Piercing</h1>
-        </div>
-    </header>
-    <nav class="navbar">
-        <ul>
-            <a href="index.html" class="item">Inicio</a>
-            <a href="./views/servicios.html" class="item">Servicios</a>
-            <a href="./views/sobreNosotros.html" class="item">Sobre Nosotros</a>
-            <a href="./views/productos.html" class="item">Productos</a>
-            <a href="./views/contactos.html" class="item">Contactos</a>
-        </ul>
-    </nav>
-    <main class="main">
-        <div class="fotos">
-            <div>
-                <img class="foto1" src="./img/foto1.jpg" alt="foto1">
-            </div>
-            <div>
-                <img class="foto2" src="./img/foto2.jpg" alt="foto2">
-            </div>
-        </div>
-        <div class="par-main">
-            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur itaque nostrum laudantium, nulla atque, doloremque dolor perspiciatis quae alias blanditiis architecto vero, ipsam odio magnam minima beatae velit provident! Pariatur cupiditate neque sint odio non reprehenderit. Harum ea dolorem, ullam tempore laborum dicta perspiciatis alias numquam sed quas dolores non natus animi accusantium nihil, eos adipisci eligendi, sint laudantium vel pariatur illo? Est corporis inventore, maxime doloremque vitae, aut alias atque excepturi sint sed expedita illum dolore distinctio aspernatur saepe dolor quo architecto unde perspiciatis porro cumque placeat delectus sunt! Expedita velit placeat dolorem ad dolore ipsam eaque doloribus ab earum? Soluta adipisci, assumenda eligendi quisquam sequi voluptatibus repudiandae at quo cum nostrum quod esse, quidem, tempora voluptate. Ratione autem perspiciatis similique odit quae quaerat labore sunt adipisci nam. Nostrum odio quia excepturi molestiae cum in quod corrupti. Assumenda tempora recusandae quos fugiat suscipit amet veniam veritatis atque. Quisquam nisi accusantium quam rerum placeat odit at deleniti cupiditate, quas itaque. A perferendis laborum, ipsam quod optio nisi, ut rerum rem, architecto provident ipsa reiciendis. Voluptate adipisci provident animi reprehenderit quas, nesciunt asperiores, suscipit velit nobis quia consectetur! Vero ea similique expedita dicta ducimus iusto voluptate. Nihil mollitia dolorem aspernatur</p>
-        </div>
-</main>
-    <sidebar class="aside">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, pariatur quos! Sunt vitae mollitia vel, officiis delectus assumenda voluptatum nobis corporis cumque obcaecati harum veniam neque, velit, adipisci quae ipsam.</sidebar>
-    <footer class="footer">
-        <h4>
-            © 2022 Todos Los Derechos Reservados.</h4>
+
     </footer> -->
     <!-- shop content -->
     <div id="shopContent" class="shop-content"></div>
