agregué fetch , listo para entregar

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 <!-- modal container -->
 <div id="modalContainer" class="modal-container"></div>
 
-    </footer> -->
-    <!-- shop content -->
-    <div id="shopContent" class="shop-content"></div>
+<!-- shop content -->
+<!-- <div id="shopContent" class="shop-content"></div> -->
 
 <footer class="footer">
     <h4>Todos los Derechos Reservados ° 2022.</h4>
