modifique completo el front, falta mostrar compras gaurdadas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                 <img class="img-logo" src="public/img/prueba3.png" alt="logo">
                 <h1 class="navBar-logo">Merlina's Piercing</h1>
             
-                <h1 class="ver-carrito" id="verCarrito">🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span></h1>
+                <h1 class="ver-carrito" id="verCarrito">
+                    🛒
+                    <span id="cantidadCarrito" class="cantidad-carrito"></span>
+                </h1>
             </div>
         </nav>
     </div>
